        == 388664  unhandled arm64-linux syscall: 117  (ptrace)
372347  Replacement problem of the additional c++14/c++17 new/delete operators
376257  helgrind history full speed up using a cached stack
379373  Fix syscall param msg->desc.port.name points to uninitialised byte(s)
        on macOS 10.12
379748  Fix missing pselect syscall (OS X 10.11)
380397  s390x: __GI_strcspn() replacemenet needed
381162  possible array overrun in VEX register allocator
381272  ppc64 doesn't compile test_isa_2_06_partx.c without VSX support
381274  powerpc too chatty even with --sigill-diagnostics=no
381289  epoll_pwait can have a NULL sigmask
381553  VEX register allocator v3
381556  arm64: Handle feature registers access on 4.11 Linux kernel or later
381769  Use ucontext_t instead of struct ucontext
381805  arm32 needs ld.so index hardwire for new glibc security fixes
382256  gz compiler flag test doesn't work for gold
382407  vg_perf needs "--terse" command line option
382515  "Assertion 'di->have_dinfo' failed." on wine's dlls/mscoree/tests/[..]
382563  MIPS MSA ASE support
382998  xml-socket doesn't work
383275  massif: m_xarray.c:162 (ensureSpaceXA): Assertion '!xa->arr' failed
383723  Fix missing kevent_qos syscall (macOS 10.11)
        == 385604  illegal hardware instruction (OpenCV cv::namedWindow)
384096  Mention AddrCheck at Memcheck's command line option [..]
384230  vex x86->IR: 0x67 0xE8 0xAB 0x68
        == 384156  vex x86->IR: 0x67 0xE8 0x6B 0x6A
        == 386115  vex x86->IR: 0x67 0xE8 0xD3 0x8B any program
        == 388407  vex x86->IR: 0x67 0xE8 0xAB 0x29
384337  performance improvements to VEX register allocator v2 and v3
384526  reduce number of spill insns generated by VEX register allocator v3
384584  Callee saved regs listed first for AMD64, X86, and PPC architectures
384631  Sanitise client args as printed with -v
384633  Add a simple progress-reporting facility
384987  VEX regalloc: allocate caller-save registers for short lived vregs