@@ -630,7 +630,7 @@ DECL_TEMPLATE(darwin, getentropy);                  // 500
 // 512
 // 513
 // 514
-// NYI ulock_wait                                   // 515
+DECL_TEMPLATE(darwin, ulock_wait);                  // 515
 DECL_TEMPLATE(darwin, ulock_wake);                  // 516
 // NYI fclonefileat                                 // 517
 // NYI fs_snapshot                                  // 518
